--- a/simple-linear-regression.ipynb
+++ b/simple-linear-regression.ipynb
@@ -235,14 +235,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 228,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# ------- 84.2 seems correct"
+    "### ------- 84.2 seems correct"
    ]
   },
   {
@@ -268,14 +266,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 230,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# ------- a 69% good correlation......not so great"
+    "### ------- a 69% good correlation......not so great"
    ]
   },
   {
